--- a/_EXAMPLE-SDK_2024123-ZGM230SA_/.cproject
+++ b/_EXAMPLE-SDK_2024123-ZGM230SA_/.cproject
@@ -62,6 +62,11 @@
 									<listOptionValue builtIn="false" value="-fmessage-length=0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.1296439761" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/FinalTestFiles}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/DevCommandClasses/ManufacturerSpecific}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/DevCommandClasses/Configuration/inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/DevCommandClasses/Configuration/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/autogen}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/config/cc_config}&quot;"/>
@@ -470,7 +475,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="trashed_modified_files|_EXAMPLE-SDK_2024123-ZGM230SA__cmake|_EXAMPLE-SDK_2024123-ZGM230SA__iar_cmake" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="simplicity_sdk_2024.12.3/protocol/z-wave/ZAF/CommandClasses/ManufacturerSpecific|simplicity_sdk_2024.12.3/protocol/z-wave/ZAF/CommandClasses/Configuration|simplicity_sdk_2024.12.1/protocol/z-wave/ZAF/CommandClasses/ManufacturerSpecific|simplicity_sdk_2024.12.1/protocol/z-wave/ZAF/CommandClasses/Configuration|trashed_modified_files|_EXAMPLE-SDK_2024123-ZGM230SA__cmake|_EXAMPLE-SDK_2024123-ZGM230SA__iar_cmake" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
